remake-of-factories,Ukrainian-localization,temporarily-removed-blue-night

--- a/core/assets/bundles/bundle.properties
+++ b/core/assets/bundles/bundle.properties
@@ -1,41 +1,37 @@
 planet.ol-omaloon.name = Omaloon
-planet.ol-omaloon.description = This far away the dove planet and doesn't receive any warmth.
+planet.ol-omaloon.description = Planet in another stellar system. Cold star does not give it enough heat, so eternal winter reigns on the surface of the planet.
 planet.ol-omaloon.details = [orange]The best planet of all planets.
 
 # region Items
 
 item.ol-omalite.name = Omalite
-item.ol-omalite.description = Cold and slightly radioactive stone.  Used in energy and ammunition.
-item.ol-omalite.details = Under the action of Omaline, this material acquires radioactive abilities and amazing color.
+item.ol-omalite.description = Cold and slightly radioactive stone. Used in energy and ammunition.
 
-item.ol-omalite-alloy.name = Omalite Alloy
-item.ol-omalite-alloy.description = Cold and slightly radioactive alloy.  Used in ammunition.
-item.ol-omalite-alloy.details = Under the action of Alloying Omalite and Titanium produces a strong and very cold material that can be thrown at enemies.
+item.ol-omalite-alloy.name = Omalite alloy
+item.ol-omalite-alloy.description = Cold and slightly radioactive alloy. Used as ammunition and as a material for buildings.
 
 ###Liquids
 
-liquid.ol-liquid-omalite.name = Liquid Omalite
-liquid.ol-liquid-omalite.description = Extremely cold liquid, ideal for cooling the best reactors.
-liquid.ol-liquid-omalite.details = Testing technology.
+liquid.ol-liquid-omalite.name = Omalite liquid
+liquid.ol-liquid-omalite.description = Extremely cold liquid, used to cool more powerful reactors and some factories.
 
 ###Blokcs
 
-block.ol-omalite-alloy-wall.name = Omalite Alloy Wall
-block.ol-omalite-alloy-wall.description = Durable and fire-resistant wall made of omalite alloy and titanium.
-block.ol-omalite-alloy-wall.details = Omalite is a very cold mineral, which is why these walls are ideal for protecting the core.
+block.ol-omalite-alloy-wall.name = Omalite alloy wall
+block.ol-omalite-alloy-wall.description = Protects buildings from enemy shells. It is very cold, so the units that hit it with a laser beam freeze. Does not burn.
 
-block.ol-omalite-alloy-wall-large.name = Lerge Omalite Alloy Wall
-block.ol-omalite-alloy-wall-large.description = Durable and fire-resistant wall made of omalite alloy and titanium.
-block.ol-omalite-alloy-wall-large.details = Omalite is a very cold mineral, which is why these walls are ideal for protecting the core.
+block.ol-omalite-alloy-wall-large.name = Large omalite alloy wall
+block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy shells. It is very cold, so the units that hit it with a laser beam freeze. Does not burn.
 
-block.ol-low-temperature-smelter.name = Low Temperature Smelter
-block.ol-low-temperature-smelter.description = Smelts Omalite alloy at low temperatures avoiding destructive explosion. Low pressure helps to melt titanium and omalite at low temperatures. 
-block.ol-low-temperature-smelter.details = Somehow due to the very low pressure inside the smelting fusion of omalite and titanium becomes safe, we don't know how it works but it works :З.
+block.ol-low-temperature-smelter.name = Alloy centrifuge
+block.ol-low-temperature-smelter.description = Manufactures a strong omalite alloy in a centrifuge from omalite and titanium. Also in the process produces a small amount of energy. 
 
-block.ol-fuser.name = Fuser
-block.ol-fuser.description = It mixes cryogen and omalite to create an extremely cold liquid.
-block.ol-fuser.details = Vacuum pressing proved to be the best way to mix these extremely cold substances.
+block.ol-fuser.name = Liquefier
+block.ol-fuser.description = Dissolves omalite in water to obtain omalite liquid by slowly stirring these ingredients.
 
 block.ol-hyper-receiver.name = Hyper Panel
-block.ol-hyper-receiver.description = The maximum possible solar panel. Produces a more amount of energy than a large panel.
+block.ol-hyper-receiver.description = The maximum possible solar panel. Produces more energy than a large solar panel. It is good to use to recharge batteries during daylight hours.
 block.ol-hyper-receiver.details = It turns out omalite catches solar energy very well, even better than silicon.
+
+###Bars
+bar.acceleration = Acceleration
