--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 planet.ol-omaloon.name = Omaloon
-planet.ol-omaloon.description = Planet in the another stellar system. Cold star does not give it enough heat, so eternal winter reigns on the surface of the planet.
+planet.ol-omaloon.description = A planet in the another stellar system. The cold star does not give it enough heat, so eternal winter reigns on the surface of the planet.
 planet.ol-omaloon.details = [orange]The best planet of all planets.
 
 planet.ol-amsha.name = Amsha
@@ -14,35 +14,36 @@ item.ol-omalite.name = Omalite
 item.ol-omalite.description = Cold and slightly radioactive stone. Used in energy production and ammunition.
 
 item.ol-omalite-alloy.name = Omalite alloy
-item.ol-omalite-alloy.description = Cold and slightly radioactive alloy. Used as ammunition and material for buildings.
+item.ol-omalite-alloy.description = Refined Omalite used in extremely durable walls and weaponry.
 
 ###Liquids
 
 liquid.ol-liquid-omalite.name = Omalite liquid
-liquid.ol-liquid-omalite.description = Extremely cold liquid, used to cool more powerful reactors and some factories.
+liquid.ol-liquid-omalite.description = Extremely cold liquid, used to cool more powerful reactors and factories.
 
 ###Blocks
 
-block.ol-omalite-alloy-wall.name = Alloy wall
-block.ol-omalite-alloy-wall.description = Protects buildings from enemy shells. It is very cold, so the units that hit it with a laser beam freeze. Does not burn.
+block.ol-omalite-alloy-wall.name = Alloy Wall
+block.ol-omalite-alloy-wall.description = Protects buildings from enemy projectiles. Freezes units that posses a laser weapon, provided they hit the wall. Does not burn.
 
-block.ol-omalite-alloy-wall-large.name = Large alloy wall
-block.ol-omalite-alloy-wall-large.description = Protects ally buildings from enemy shells. It is very cold, so the units that hit it with a laser beam freeze. Does not burn.
+
+block.ol-omalite-alloy-wall-large.name = Large Alloy Wall
+block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy projectiles. Freezes units that posses a laser weapon, provided they hit the wall. Does not burn.
 
 block.ol-test-joint.name = Test join block
 
 block.ol-low-temperature-smelter.name = Alloy centrifuge
-block.ol-low-temperature-smelter.description = Produces strong omalite alloy from omalite and titanium. Needs cooling. During the process it produces a small amount of energy. 
+block.ol-low-temperature-smelter.description = Produces strong Omalite Alloy from Omalite and titanium. Needs cooling. During the process it produces a small amount of energy. 
 
 block.ol-fuser.name = Thinner
 block.ol-fuser.description = Dissolves omalite in water to obtain omalite liquid by slowly stirring it.
 
 block.ol-hyper-receiver.name = Hyper panel
-block.ol-hyper-receiver.description = The best possible solar panel. Produces more energy than the large solar panel. Uses liquid omalite to collect power. Can be used to recharge batteries in daylight.
-block.ol-hyper-receiver.details = It turns out that the omalite liquid absorbs solar energy very well, even better than silicon.
+block.ol-hyper-receiver.description = The best possible solar panel. Produces more energy than the large solar panel. Uses liquid omalite to collect power. Can be used to recharge batteries in the daylight.
+block.ol-hyper-receiver.details = It turns out that the Omalite liquid absorbs solar energy very well, even better than silicon.
 
-block.ol-blue-night.name = Blue night
-block.ol-blue-night.description = Shoots charged bundles of omalite liquid at ground enemies, freezes enemy's systems.
+block.ol-blue-night.name = Blue Night
+block.ol-blue-night.description = Shoots charged projectiles of omalite liquid at ground enemies, freezing the enemy and making it more vulnerable to explosions.
 
 ###Bars
 bar.acceleration = Acceleration
