--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,3 +1,4 @@
+###Planets
 planet.ol-omaloon.name = Omaloon
 planet.ol-omaloon.description = A planet in the another stellar system. The cold star does not give it enough heat, so eternal winter reigns on the surface of the planet.
 planet.ol-omaloon.details = [orange]The best planet of all planets.
@@ -10,31 +11,58 @@ planet.ol-set.description = Omaloon`s satellite.
 
 # region Items
 
+item.ol-grumon.name = Grumon
+item.ol-grumon.description = Used in advanced defense and production.
+item.ol-grumon.details = Metal with strong magnetic abilities.
+
 item.ol-omalite.name = Omalite
-item.ol-omalite.description = Cold and slightly radioactive stone. Used in energy production and ammunition.
+item.ol-omalite.description = Used in energy production and ammunition.
+item.ol-omalite.details = Cold and slightly radioactive stone.
 
 item.ol-omalite-alloy.name = Omalite alloy
-item.ol-omalite-alloy.description = Cold and slightly radioactive alloy. Used in buildings and weaponry.
+item.ol-omalite-alloy.description = Widely used in buildings.
+item.ol-omalite-alloy.details = Cold and slightly radioactive alloy.
+
+item.ol-magnetic-combination.name = Magnetic Combination
+item.ol-magnetic-combination.description = Used in transportation and projectors.
+
+item.ol-zarini.name = Zarini
+item.ol-zarini.description = Used in special types of ammunition and advanced unit construction.
+
+item.ol-valkon.name = Valkon
+item.ol-valkon.description = Used in unit construction and advanced structures.
 
 ###Liquids
 
 liquid.ol-liquid-omalite.name = Omalite liquid
-liquid.ol-liquid-omalite.description = Extremely cold liquid, used to cool more powerful reactors and factories.
+liquid.ol-liquid-omalite.description = Used to cool more powerful reactors and factories.
+liquid.ol-liquid-omalite.details = Icy liquid.
+
+liquid.ol-dalanite.name = Dalanite
+liquid.ol-dalanite.description = Sprayed on enemies and used on item production.
 
 ###Blocks
 
+block.ol-gravel.name = Gravel
+block.ol-gravel-dalanite.name = Gravel dalanite
+block.ol-flor-dalanite.name = Dalanite
+block.ol-deep-dalanite.name = Deep dalanite
+
 block.ol-omalite-alloy-wall.name = Alloy Wall
-block.ol-omalite-alloy-wall.description = Protects buildings from enemy projectiles. Freezes units that posses a laser weapon, provided they hit the wall. Does not burn.
+block.ol-omalite-alloy-wall.description = Protects buildings from enemy shells. Freezes units that have laser weapons if they hit a wall. Strong. Does not burn.
 
 block.ol-omalite-alloy-wall-large.name = Large Alloy Wall
 block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy projectiles. Freezes units that posses a laser weapon, provided they hit the wall. Does not burn.
 
 block.ol-test-joint.name = Test join block
 
-block.ol-low-temperature-smelter.name = Alloy centrifuge
-block.ol-low-temperature-smelter.description = Produces strong Omalite Alloy from Omalite and titanium. Needs cooling. During the process it produces a small amount of energy.  
+block.ol-multi-factory.name = Multi factory
+block.ol-multi-factory.description = Has 3 recipes for creating items. Recipes can be switched. The unique design of this block allows make items at almost the same speed.
 
-block.ol-fuser.name = Thinner
+block.ol-low-temperature-smelter.name = Alloy centrifuge
+block.ol-low-temperature-smelter.description = Produces strong Omalite Alloy from Omalite and titanium. Needs cooling. During the process it produces a small amount of energy.
+
+block.ol-fuser.name = Diluent
 block.ol-fuser.description = Dissolves omalite in water to obtain omalite liquid by slowly stirring it.
 
 block.ol-hyper-receiver.name = Hyper panel
@@ -42,7 +70,12 @@ block.ol-hyper-receiver.description = The best possible solar panel. Produces mo
 block.ol-hyper-receiver.details = It turns out that the Omalite liquid absorbs solar energy very well, even better than silicon.
 
 block.ol-blue-night.name = Blue Night
-block.ol-blue-night.description = Shoots charged projectiles of omalite liquid at ground enemies, freezing the enemy and making it more vulnerable to explosions.
+block.ol-blue-night.description = Shoots charged shells of amalithic liquid at ground enemies, freezing and making them more vulnerable to explosions. An advanced homing system does not give enemies a chance to survive.
 
+###StusEffects
+status.ol-slime.name = Slimed
 ###Bars
 bar.acceleration = Acceleration
+bar.liquid-capacity = Liquids:
+###Stats
+stat.magnetic = Magnetic
