--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies{
     //compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
 
     annotationProcessor 'com.github.Anuken:jabel:0.8.0'
+    compileOnly "$mindustryPath:core:$mindustryVersion"
     compileOnly "com.github.Anuken.MindustryJitpack:core:211c9e1a16"
     compileOnly "com.github.Anuken.Arc:arc-core:dfcb21ce56"
 
