--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ task jarAndroid{
 
 jar{
     archiveFileName = "${project.archivesBaseName}Desktop.jar"
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
     from{
         configurations.runtimeClasspath.collect{ it.isDirectory() ? it : zipTree(it) }
