--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+import java.time.format.DateTimeFormatter
 apply plugin: "java"
 apply plugin: "kotlin"
 
@@ -48,7 +49,6 @@ task jarAndroid{
 
         //collect dependencies needed for desugaring
         def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")
-
         //dex and desugar files - this requires d8 in your PATH
         "d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
                 .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
@@ -87,6 +87,31 @@ task deploy(type: Jar){
     }
 }
 
+static def os(){ //Returns OS name
+    String s = System.getProperty("os.name");
+    return s == null ? "" : s;
+}
+
+static def getdatadir(){ //Returns Mindustry data directory path
+    def ret = System.getenv("MINDUSTRY_DATA_DIR")
+    if(ret == null){
+        def os = os()
+        if(os.contains("Windows")){
+            return System.getenv("AppData") + "\\Mindustry\\"
+        }else if(os.contains("Linux") || os.contains("BSD")){
+            if(System.getenv("XDG_DATA_HOME") != null){
+                String dir = System.getenv("XDG_DATA_HOME")
+                if(!dir.endsWith("/")) dir += "/"
+                return dir + "Mindustry/"
+            }
+            return System.getProperty("user.home") + "/.local/share/Mindustry/"
+        }else if(os.contains("Mac")){
+            return System.getProperty("user.home") + "/Library/Application Support/Mindustry/";
+        }
+    }
+    return ret
+}
+
 task mjar(){
     dependsOn "jar"
     doFirst{}
@@ -106,15 +131,19 @@ task mjar(){
         def modsDirectories = [];
         def file = new File(rootDir, "modsDirectories.txt");
 
-        if (file.exists()) {
+        if(file.exists()){
             BufferedReader reader = new BufferedReader(new FileReader(file));
             reader.lines().forEach(line -> modsDirectories.add(line))
             reader.close();
-        } else {
+        }else{
             modsDirectories.add("classic");
         }
-        for (String directory : modsDirectories) {
-            if (directory.equals("classic")) {
+        for(String directory : modsDirectories){
+            if(directory.startsWith("#") || directory.startsWith("//")){
+                println "Directory \"$directory\" was skipped."
+                continue
+            }
+            if(directory.equals("classic")){
                 directory = getdatadir() + "mods";
             }
             acopy(directory);
@@ -127,10 +156,11 @@ task mjar(){
 task run{
     dependsOn mjar
     doLast{
+        throw new RuntimeException("Does not work for Mindustry BE")
         def gamePath = temporaryDir.absolutePath + "\\Mindustry$mindustryVersion" + ".jar"
         def gameUrl = "https://github.com/Anuken/Mindustry/releases/download/$mindustryVersion" + "/Mindustry.jar"
         def gameFile = new File(gamePath)
-        if (!gameFile.exists()) {
+        if(!gameFile.exists()){
             println "Downloading Mindustry $mindustryVersion" + " to ${gamePath}"
             new URL(gameUrl).withInputStream{ i -> gameFile.withOutputStream{ it << i } }
             println "Done"
