--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,76 +1,69 @@
 ###Planets
-planet.ol-omaloon.name = Omaloon
-planet.ol-omaloon.description = A planet in the another stellar system. The cold star does not give it enough heat, so eternal winter reigns on the surface of the planet.
-planet.ol-omaloon.details = [orange]The best planet of all planets.
-
 planet.ol-amsha.name = Amsha
 planet.ol-amsha.description = A star that has only one planet.
+planet.ol-amsha.details = After we captured the Planetary Launch Terminal, we found this strange star. Further investigation shows that this is a red giant and it contains only one planet, which is unexpected.
 
 planet.ol-set.name = Set
-planet.ol-set.description = Omaloon`s satellite.
+planet.ol-set.description = Omaloon`s satellite. Similar to that of it's parent planet, however it has next to no useful resources.
 
 # region Items
 
 item.ol-grumon.name = Grumon
 item.ol-grumon.description = Used in advanced defense and production.
-item.ol-grumon.details = Metal with strong magnetic abilities.
+item.ol-grumon.details = A metal with strong magnetic abilities.
 
 item.ol-omalite.name = Omalite
-item.ol-omalite.description = Used in energy production and ammunition.
-item.ol-omalite.details = Cold and slightly radioactive stone.
+item.ol-omalite.description = Used in production, ammunition and advanced coolant.
+item.ol-omalite.details = Cold, radioactive stone. Source unknown.
 
-item.ol-omalite-alloy.name = Omalite alloy
+item.ol-omalite-alloy.name = Omalite Alloy
 item.ol-omalite-alloy.description = Widely used in buildings.
-item.ol-omalite-alloy.details = Cold and slightly radioactive alloy.
+item.ol-omalite-alloy.details = Cold, slightly radioactive.
 
 item.ol-magnetic-combination.name = Magnetic Combination
 item.ol-magnetic-combination.description = Used in transportation and projectors.
-
-item.ol-zarini.name = Zarini
-item.ol-zarini.description = Used in special types of ammunition and advanced unit construction.
-
-item.ol-valkon.name = Valkon
-item.ol-valkon.description = Used in unit construction and advanced structures.
+@@ -34,48 +35,49 @@ item.ol-valkon.description = Used in unit construction and advanced structures.
 
 ###Liquids
 
-liquid.ol-liquid-omalite.name = Omalite liquid
+liquid.ol-liquid-omalite.name = Omalite Liquid
 liquid.ol-liquid-omalite.description = Used to cool more powerful reactors and factories.
-liquid.ol-liquid-omalite.details = Icy liquid.
+liquid.ol-liquid-omalite.details = Icy liquid. Barely colder than cryofluid however it still can be used as coolant.
 
 liquid.ol-dalanite.name = Dalanite
 liquid.ol-dalanite.description = Sprayed on enemies and used on item production.
+liquid.ol-dalanite.details = Somewhat slimy.
 
 ###Blocks
 
 block.ol-gravel.name = Gravel
-block.ol-gravel-dalanite.name = Gravel dalanite
+block.ol-gravel-dalanite.name = Gravel Dalanite 
 block.ol-flor-dalanite.name = Dalanite
-block.ol-deep-dalanite.name = Deep dalanite
+block.ol-deep-dalanite.name = Deep Dalanite
 
-block.ol-omalite-alloy-wall.name = Alloy Wall
-block.ol-omalite-alloy-wall.description = Protects buildings from enemy shells. Freezes units that have laser weapons if they hit a wall. Strong. Does not burn.
+block.ol-omalite-alloy-wall.name = Omalite Alloy Wall
+block.ol-omalite-alloy-wall.description = Protects buildings from enemy shells. Freezes units that have laser weapons if they hit a wall. Resilient. Doesn't burn.
 
-block.ol-omalite-alloy-wall-large.name = Large Alloy Wall
-block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy projectiles. Freezes units that posses a laser weapon, provided they hit the wall. Does not burn.
+block.ol-omalite-alloy-wall-large.name = Large Omalite Alloy Wall
+block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy projectiles. Freezes units that posses a laser weapon, provided they hit the wall. Doesn't burn.
 
 block.ol-test-joint.name = Test join block
 
 block.ol-multi-factory.name = Multi factory
-block.ol-multi-factory.description = Has 3 recipes for creating items. Recipes can be switched. The unique design of this block allows make items at almost the same speed.
+block.ol-multi-factory.description = Has 3 recipes for creating items. Recipes can be switched. The unique design of this block allows crafting different items at almost the same speed.
 
-block.ol-low-temperature-smelter.name = Alloy centrifuge
-block.ol-low-temperature-smelter.description = Produces strong Omalite Alloy from Omalite and titanium. Needs cooling. During the process it produces a small amount of energy.
+block.ol-low-temperature-smelter.name = Omalite Centrifuge
+block.ol-low-temperature-smelter.description = Produces strong Omalite Alloy from Omalite and titanium. Requires cooling. During the process it produces a small amount of energy.
 
 block.ol-fuser.name = Diluent
-block.ol-fuser.description = Dissolves omalite in water to obtain omalite liquid by slowly stirring it.
+block.ol-fuser.description = Dissolves omalite in water to obtain Omalite Liquid by slowly stirring it.
 
 block.ol-hyper-receiver.name = Hyper panel
 block.ol-hyper-receiver.description = The best possible solar panel. Produces more energy than the large solar panel. Uses liquid omalite to collect power. Can be used to recharge batteries in the daylight.
 block.ol-hyper-receiver.details = It turns out that the Omalite liquid absorbs solar energy very well, even better than silicon.
 
 block.ol-blue-night.name = Blue Night
-block.ol-blue-night.description = Shoots charged shells of amalithic liquid at ground enemies, freezing and making them more vulnerable to explosions. An advanced homing system does not give enemies a chance to survive.
+block.ol-blue-night.description = Shoots charged shells of packed omalite liquid at ground enemies, freezing and making them more vulnerable to explosions. An advanced homing system does not give enemies a chance to either survive or run.
 
 ###StusEffects
 status.ol-slime.name = Slimed
