--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -22,7 +22,7 @@ item.ol-omalite-alloy.details = Cold, slightly radioactive.
 
 item.ol-magnetic-combination.name = Magnetic Combination
 item.ol-magnetic-combination.description = Used in transportation and projectors.
-@@ -34,48 +35,49 @@ item.ol-valkon.description = Used in unit construction and advanced structures.
+@@ -34,48 +35,49 @@ item.ol-valkon.description = Used in unit construction and advanced structures. Exceptionally magnetic.
 
 ###Liquids
 
@@ -48,8 +48,9 @@ block.ol-omalite-alloy-wall-large.name = Large Omalite Alloy Wall
 block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy projectiles. Freezes units that posses a laser weapon, provided they hit the wall. Doesn't burn.
 
 block.ol-test-joint.name = Test join block
+block.ol-test-joint.description = A block that joins together. Nearly idestructible. Sandbox only.
 
-block.ol-multi-factory.name = Multi factory
+block.ol-multi-factory.name = Multi Factory
 block.ol-multi-factory.description = Has 3 recipes for creating items. Recipes can be switched. The unique design of this block allows crafting different items at almost the same speed.
 
 block.ol-low-temperature-smelter.name = Omalite Centrifuge
@@ -58,17 +59,17 @@ block.ol-low-temperature-smelter.description = Produces strong Omalite Alloy fro
 block.ol-fuser.name = Diluent
 block.ol-fuser.description = Dissolves omalite in water to obtain Omalite Liquid by slowly stirring it.
 
-block.ol-hyper-receiver.name = Hyper panel
-block.ol-hyper-receiver.description = The best possible solar panel. Produces more energy than the large solar panel. Uses liquid omalite to collect power. Can be used to recharge batteries in the daylight.
+block.ol-hyper-receiver.name = Omalite Solar Panel
+block.ol-hyper-receiver.description = Collects energy from the sun. Requires omalite liquid.
 block.ol-hyper-receiver.details = It turns out that the Omalite liquid absorbs solar energy very well, even better than silicon.
 
 block.ol-blue-night.name = Blue Night
 block.ol-blue-night.description = Shoots charged shells of packed omalite liquid at ground enemies, freezing and making them more vulnerable to explosions. An advanced homing system does not give enemies a chance to either survive or run.
 
-###StusEffects
+###Status effects
 status.ol-slime.name = Slimed
 ###Bars
 bar.acceleration = Acceleration
 bar.liquid-capacity = Liquids:
 ###Stats
-stat.magnetic = Magnetic
+stat.magnetic = Magnetism
