--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,10 +1,23 @@
+###Mod
+mod.ol.disclaimer.title = [accent]Caution![]
+mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]still under development[].\nYou may notice bugs and unfinished content. \n [red]While mod is not playable.[]
+mod.ol.ok = Ok
+mod.ol.doNotShowItAgain = Do not show this window again
+mod.ol.name = [#87ceeb]Omaloon[]
+mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
+mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj-Silin, [#e4b400]MissionaryPoseBest, [#3498db]SUS[].
+mod.ol.description = [#badbeb]My first mod. Adds mostly unique content.[]
+mod.ol.musics = [#7f7f7f]Music:[] \nComing soon!
+mod.ol.subtitle = [#87ceeb]he he
+
 ###Planets
+planet.ol-omaloon.name = Omaloon
+planet.ol-omaloon.description = Planet in another star system. Cold star does not give enough heat, so eternal winter reigns on planet.
+planet.ol-omaloon.details = [orange]Best planet of all.
+
 planet.ol-amsha.name = Amsha
 planet.ol-amsha.description = A star that has only one planet.
 planet.ol-amsha.details = After we captured the Planetary Launch Terminal, we found this strange star. Further investigation shows that this is a red giant and it contains only one planet, which is unexpected.
-
-planet.ol-set.name = Set
-planet.ol-set.description = Omaloon`s satellite. Similar to that of it's parent planet, however it has next to no useful resources.
 
 # region Items
 
@@ -22,7 +35,12 @@ item.ol-omalite-alloy.details = Cold, slightly radioactive.
 
 item.ol-magnetic-combination.name = Magnetic Combination
 item.ol-magnetic-combination.description = Used in transportation and projectors.
-@@ -34,48 +35,49 @@ item.ol-valkon.description = Used in unit construction and advanced structures.
+
+item.ol-zarini.name = Zarini
+item.ol-zarini.description = Used in special ammunition types and in advanced unit construction.
+
+item.ol-valkon.name = Valkon
+item.ol-valkon.description = Used in building units and advanced structures.
 
 ###Liquids
 
@@ -49,7 +67,7 @@ block.ol-omalite-alloy-wall-large.description = Protects buildings from enemy pr
 
 block.ol-test-joint.name = Test join block
 
-block.ol-multi-factory.name = Multi factory
+block.ol-multi-factory.name = Multi Factory
 block.ol-multi-factory.description = Has 3 recipes for creating items. Recipes can be switched. The unique design of this block allows crafting different items at almost the same speed.
 
 block.ol-low-temperature-smelter.name = Omalite Centrifuge
@@ -58,17 +76,18 @@ block.ol-low-temperature-smelter.description = Produces strong Omalite Alloy fro
 block.ol-fuser.name = Diluent
 block.ol-fuser.description = Dissolves omalite in water to obtain Omalite Liquid by slowly stirring it.
 
-block.ol-hyper-receiver.name = Hyper panel
-block.ol-hyper-receiver.description = The best possible solar panel. Produces more energy than the large solar panel. Uses liquid omalite to collect power. Can be used to recharge batteries in the daylight.
-block.ol-hyper-receiver.details = It turns out that the Omalite liquid absorbs solar energy very well, even better than silicon.
+block.ol-hyper-receiver.name = Omalite Solar Panel
+block.ol-hyper-receiver.description = Collects energy from the sun. Requires omalite liquid.
 
 block.ol-blue-night.name = Blue Night
 block.ol-blue-night.description = Shoots charged shells of packed omalite liquid at ground enemies, freezing and making them more vulnerable to explosions. An advanced homing system does not give enemies a chance to either survive or run.
 
-###StusEffects
+###Status effects
 status.ol-slime.name = Slimed
 ###Bars
 bar.acceleration = Acceleration
 bar.liquid-capacity = Liquids:
 ###Stats
-stat.magnetic = Magnetic
+stat.magnetic = Magnetism
+
+###Thanks yesC48 =)
