--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -9,16 +9,16 @@ mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj-Silin, [#e4b400]Mi
 mod.ol.description = [#badbeb]My first mod. Adds mostly unique content.[]
 mod.ol.musics = [#7f7f7f]Music:[] \nComing soon!
 mod.ol.subtitle = [#87ceeb]he he
+mod.ol.omaloon-settings = Omaloon Settings
+mod.ol.show = Hide warning window[#7f7f7f](needs restart)[]
 
 ###Planets
-planet.ol-omaloon.name = Omaloon
+planet.ol-omaloon.name = Omaloon[red][hidden][]
 planet.ol-omaloon.description = Planet in another star system. Cold star does not give enough heat, so eternal winter reigns on planet.
 planet.ol-omaloon.details = [orange]Best planet of all.
 
-planet.ol-amsha.name = Amsha
-planet.ol-amsha.description = A star that has only one planet.
-planet.ol-amsha.details = After we captured the Planetary Launch Terminal, we found this strange star. Further investigation shows that this is a red giant and it contains only one planet, which is unexpected.
-
+planet.ol-amsha.name = Amsha[red][hidden][]
+planet.ol-amsha.description = An independent star that`s center of Amsha system.
 # region Items
 
 item.ol-grumon.name = Grumon
