--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories{
 }
 
 ext{
-    mindustryVersion = 'v136'
+    mindustryVersion = 'v136.1'
     jabelVersion = "0.7.0"
     modCoreVersion = "a61878d7029"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
@@ -30,12 +30,12 @@ allprojects{
 }
 
 dependencies{
-    //compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    //compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
 
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
-    compileOnly "com.github.Anuken.MindustryJitpack:core:69f0126eca"
-    compileOnly "com.github.Anuken.Arc:arc-core:b1b88883e2"
+    /*compileOnly "com.github.Anuken.MindustryJitpack:core:69f0126eca"
+    compileOnly "com.github.Anuken.Arc:arc-core:b1b88883e2"*/
 
     implementation "com.github.Zelaux.ZelauxModCore:core:$modCoreVersion"
     compileOnly "com.github.Zelaux.ZelauxModCore:annotations:$modCoreVersion"
