--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -8,9 +8,15 @@ mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
 mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj-Silin, [#e4b400]MissionaryPoseBest, [#3498db]SUS[], yesC48.
 mod.ol.description = [#badbeb]My first mod. Adds mostly unique content.[]
 mod.ol.musics = [#7f7f7f]Music:[] \nComing soon!
-mod.ol.subtitle = [#87ceeb]he he
+mod.ol.subtitle1 = [#87ceeb]he he
+mod.ol.subtitle2 = [#87ceeb]I`m alive!
+mod.ol.subtitle3 = [#87ceeb]:З
 mod.ol.omaloon-settings = Omaloon Settings
-mod.ol.show = Hide warning window[#7f7f7f](needs restart)[]
+setting.mod.ol.show.name = Hide warning window[#7f7f7f](needs restart)[]
+setting.mod.ol.show.description = Removes warning window that appears after starting game.
+setting.mod.ol.update-check.name = Check [#87ceeb]Omaloon[] for updates
+setting.mod.ol.update-check.description = If enabled, checks [#87ceeb]Omaloon[] for updates.
+
 
 ###Planets
 planet.ol-omaloon.name = Omaloon[red][hidden][]
@@ -86,8 +92,12 @@ block.ol-blue-night.description = Shoots charged shells of packed omalite liquid
 status.ol-slime.name = Slimed
 ###Bars
 bar.acceleration = Acceleration
-bar.liquid-capacity = Liquids:
 ###Stats
 stat.magnetic = Magnetism
+stat.average-surface-temperature = Average surface temperature
+unit.kelvins = [#bfbfbf]K[]
+stat.radius = Radius
+unit.kilometers = [#bfbfbf]mill. km[]
+stat.orbit-radius = Orbit radius
 
 ###Thanks yesC48 =)
