--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,6 @@
 ###Mod
 mod.ol.disclaimer.title = [accent]Caution![]
-mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]still under development[].\nYou may notice bugs and unfinished content. \n [red]While mod is not playable.[]
+mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]still under development[].\nYou may notice bugs and unfinished content. \n [red]While mod is not playable.[]\n Stay tuned for further updates.
 mod.ol.ok = Ok
 mod.ol.doNotShowItAgain = Do not show this window again
 mod.ol.name = [#87ceeb]Omaloon[]
