--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,15 +1,15 @@
 ###Mod
 mod.ol.disclaimer.title = [accent]Caution![]
-mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]still under development[].\nYou may notice bugs and unfinished content. \n [red]While mod is not playable.[]\n Stay tuned for further updates.
-mod.ol.ok = Ok
+mod.ol.disclaimer.text = [accent]Omaloonmod[] is [red]still under development[].\nYou may notice bugs and unfinished content. \n[red]The mod is yet to be playable.[]\nStay tuned for further updates.
+mod.ol.ok = Okay
 mod.ol.doNotShowItAgain = Do not show this window again
 mod.ol.name = [#87ceeb]Omaloon[]
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
-mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj-Silin, [#e4b400]MissionaryPoseBest, [#3498db]SUS[], yesC48.
+mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj-Silin, [#e4b400]MissionaryPoseBest, [#3498db]SUS[],[#9C7CD4] yesC48[].
 mod.ol.description = [#badbeb]My first mod. Adds mostly unique content.[]
 mod.ol.musics = [#7f7f7f]Music:[] \nComing soon!
 mod.ol.subtitle1 = [#87ceeb]he he
-mod.ol.subtitle2 = [#87ceeb]I`m alive!
+mod.ol.subtitle2 = [#87ceeb]I'm alive!
 mod.ol.subtitle3 = [#87ceeb]:З
 mod.ol.omaloon-settings = Omaloon Settings
 setting.mod.ol.show.name = Hide warning window[#7f7f7f](needs restart)[]
@@ -18,11 +18,11 @@ setting.mod.ol.show.description = Removes warning window that appears after star
 
 ###Planets
 planet.ol-omaloon.name = Omaloon[red][hidden][]
-planet.ol-omaloon.description = Planet in another star system. Cold star does not give enough heat, so eternal winter reigns on planet.
-planet.ol-omaloon.details = [orange]Best planet of all.
+planet.ol-omaloon.description = Planet in another star system. It's cold star does not give enough heat, so eternal winter reigns on said planet.
+planet.ol-omaloon.details = [orange]Best planet of them all.
 
 planet.ol-amsha.name = Amsha[red][hidden][]
-planet.ol-amsha.description = An independent star that`s center of Amsha system.
+planet.ol-amsha.description = An independent star that`s the center of Amsha system.
 # region Items
 
 item.ol-grumon.name = Grumon
@@ -84,7 +84,7 @@ block.ol-hyper-receiver.name = Omalite Solar Panel
 block.ol-hyper-receiver.description = Collects energy from the sun. Requires omalite liquid.
 
 block.ol-blue-night.name = Blue Night
-block.ol-blue-night.description = Shoots charged shells of packed omalite liquid at ground enemies, freezing and making them more vulnerable to explosions. An advanced homing system does not give enemies a chance to either survive or run.
+block.ol-blue-night.description = Fires charged omalite liquid projectiles at ground units, freezing the target and increasing damage dealt by explosive bullets on the target. The said projectile loosely homes.
 
 ###Status effects
 status.ol-slime.name = Slimed
@@ -96,6 +96,7 @@ stat.average-surface-temperature = Average surface temperature
 unit.kelvins = [#bfbfbf]K[]
 stat.radius = Radius
 unit.kilometers = [#bfbfbf]mill. km[]
-stat.orbit-radius = Orbit radius
+stat.orbit-radius = Orbit Radius
 
 ###Thanks yesC48 =)
+###ok
