buff omalite liquid as coolant

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,6 @@
 ###Mod
 mod.ol.disclaimer.title = [accent]Caution![]
-mod.ol.disclaimer.text = [accent]Omaloonmod[] is [red]still under development[].\nYou may notice bugs and unfinished content. \n[red]The mod is yet to be playable.[]\nStay tuned for further updates.
+mod.ol.disclaimer.text = [accent]Omaloon Mod[] is [red]still under development[].\nYou may notice bugs and unfinished content. \n[red]The mod is yet to be playable.[]\nStay tuned for further updates.
 mod.ol.ok = Okay
 mod.ol.doNotShowItAgain = Do not show this window again
 mod.ol.name = [#87ceeb]Omaloon[]
