--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -78,7 +78,7 @@ block.ol-low-temperature-smelter.name = Omalite Centrifuge
 block.ol-low-temperature-smelter.description = Produces strong Omalite Alloy from Omalite and titanium. Requires cooling. During the process it produces a small amount of energy.
 
 block.ol-fuser.name = Diluent
-block.ol-fuser.description = Dissolves omalite in water to obtain Omalite Liquid by slowly stirring it.
+block.ol-fuser.description = Crushes omalite to fine powder and mixes it to water to form omalite liquid.
 
 block.ol-hyper-receiver.name = Omalite Solar Panel
 block.ol-hyper-receiver.description = Collects energy from the sun. Requires omalite liquid.
@@ -92,11 +92,8 @@ status.ol-slime.name = Slimed
 bar.acceleration = Acceleration
 ###Stats
 stat.magnetic = Magnetism
-stat.average-surface-temperature = Average surface temperature
+stat.average-surface-temperature = Average Surface Temperature
 unit.kelvins = [#bfbfbf]K[]
 stat.radius = Radius
 unit.kilometers = [#bfbfbf]mill. km[]
 stat.orbit-radius = Orbit Radius
-
-###Thanks yesC48 =)
-###ok
