--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -5,13 +5,16 @@ mod.ol.ok = Ok
 mod.ol.doNotShowItAgain = Do not show this window again
 mod.ol.name = [#87ceeb]Omaloon[]
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
-mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj-Silin, [#e4b400]MissionaryPoseBest, [#3498db]SUS[], yesC48.
+mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48.
 mod.ol.description = [#badbeb]My first mod. Adds mostly unique content.[]
 mod.ol.musics = [#7f7f7f]Music:[] \nComing soon!
 mod.ol.subtitle1 = [#87ceeb]he he
 mod.ol.subtitle2 = [#87ceeb]I`m alive!
 mod.ol.subtitle3 = [#87ceeb]:З
-mod.ol.omaloon-settings = Omaloon Settings
+mod.ol.subtitle4 = [#87ceeb]Community!
+mod.ol.omaloon-settings = Omaloon
+setting.ol.discord = [accent]Join the Omaloon Discord community![] \n[#87ceeb]There you can: \n\n- Communicate with Omaloon developers! \n- Offer your ideas! \n- Chat with other «connoisseurs of beauty»! \n- Join to development of Omaloon!
+setting.ol.discord-join = Join to Omaloon Discord community!
 setting.mod.ol.show.name = Hide warning window[#7f7f7f](needs restart)[]
 setting.mod.ol.show.description = Removes warning window that appears after starting game.
 
