--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -55,16 +55,15 @@ liquid.ol-liquid-omalite.name = Omalite Liquid
 liquid.ol-liquid-omalite.description = Used to cool more powerful reactors and factories.
 liquid.ol-liquid-omalite.details = Icy liquid. Barely colder than cryofluid however it still can be used as coolant.
 
-liquid.ol-dalanite.name = Dalanite
-liquid.ol-dalanite.description = Sprayed on enemies and used on item production.
-liquid.ol-dalanite.details = Somewhat slimy.
+liquid.ol-dalanii.name = Dalanii
+liquid.ol-dalanii.description = Used on item production.
+liquid.ol-dalanii.details = Somewhat slimy.
 
 ###Blocks
 
-block.ol-gravel.name = Gravel
-block.ol-gravel-dalanite.name = Gravel Dalanite 
-block.ol-flor-dalanite.name = Dalanite
-block.ol-deep-dalanite.name = Deep Dalanite
+block.ol-gravel-dalanii.name = Gravel Dalanii
+block.ol-flor-dalanii.name = Dalanii
+block.ol-deep-dalanii.name = Deep Dalanii
 
 block.ol-omalite-alloy-wall.name = Omalite Alloy Wall
 block.ol-omalite-alloy-wall.description = Protects buildings from enemy shells. Freezes units that have laser weapons if they hit a wall. Resilient. Doesn't burn.
@@ -87,7 +86,7 @@ block.ol-hyper-receiver.name = Omalite Solar Panel
 block.ol-hyper-receiver.description = Collects energy from the sun. Requires omalite liquid.
 
 block.ol-blue-night.name = Blue Night
-block.ol-blue-night.description = Shoots charged shells of packed omalite liquid at ground enemies, freezing and making them more vulnerable to explosions. An advanced homing system does not give enemies a chance to either survive or run.
+block.ol-blue-night.description = Shoots charged shells of packed omalite liquid at ground enemies, freezing and making them more vulnerable to explosions. An advanced homing system does not give enemies a chance to either run.
 
 ###Status effects
 status.ol-slime.name = Slimed
