--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -86,7 +86,7 @@ block.ol-hyper-receiver.name = Omalite Solar Panel
 block.ol-hyper-receiver.description = Collects energy from the sun. Requires omalite liquid.
 
 block.ol-blue-night.name = Blue Night
-block.ol-blue-night.description = Shoots charged shells of packed omalite liquid at ground enemies, freezing and making them more vulnerable to explosions. An advanced homing system does not give enemies a chance to either run.
+block.ol-blue-night.description = Fires powerful charged freezing projectiles that freeze and loosely home to the cursor.\nRequires power and omalite liquid.
 
 ###Status effects
 status.ol-slime.name = Slimed
@@ -97,7 +97,7 @@ stat.magnetic = Magnetism
 stat.average-surface-temperature = Average surface temperature
 unit.kelvins = [#bfbfbf]K[]
 stat.radius = Radius
-unit.kilometers = [#bfbfbf]mill. km[]
+unit.kilometers = [#bfbfbf]km³[]
 stat.orbit-radius = Orbit radius
 
 ###Thanks yesC48 =)
